Add unit tests for FromStringValueConverter